fix webshop voucher history title spacing

--- a/src/sources/forus-webshop/scss/_common/sections/blocks/transactions.scss
+++ b/src/sources/forus-webshop/scss/_common/sections/blocks/transactions.scss
@@ -17,7 +17,7 @@
             .transactions-title {
                 color: #282b39;
                 font: 700 22px/24px $bf;
-                padding-right: 8px;
+                margin: 0 5px 0 0;
             }
         }
 
